# kelon

./: .clang-format  .gitignore  .gitmodules  .ignore  .sources  CMakeLists.txt  Makefile  README.md  alloinit  app_name.txt  imgui.ini  justfile  run.sh
Marimba-data/: 0.preset  test.synthSequence
include/kelon/: util.hpp
include/kelon/marimba/: additive.hpp  instruments.hpp  parameter.hpp  subtractive.hpp  visualization.hpp
kelon-data/: 0.preset  1.preset  default.presetMap  marimba.preset  xylophone.preset
scripts/: format.sh  list.sh  run.sh
src/: .fdignore  app.cpp  app.hpp  compressor.cpp  compressor.hpp  main.cpp  main.hpp  marimba.cpp  marimba.hpp  util.cpp  util.hpp
src/app/: app.cpp  app.hpp
src/lib/: util.cpp
src/lib/marimba/: additive.cpp  instruments.cpp  parameter.cpp  subtractive.cpp  visualization.cpp
